[project]
name = "globe-crm-api"
version = "0.1.0"
description = "Mapple Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "geoalchemy2>=0.15.0",
    "shapely>=2.0.0",
    "redis>=5.0.0",
    "miniopy-async>=1.21",
    "pyjwt[crypto]>=2.9.0",
    "httpx>=0.27.0",
    "geoalchemy2>=0.17.0",
    "authlib>=1.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# conftest sets JWT_SIGNING_KEY in os.environ before importing src.* (auth.py
# fails fast without it), so module-level imports cannot all sit at the top.
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# Default run is DB-free: e2e (live server) and integration (real Postgres) are
# deselected. Run them explicitly: uv run pytest -m e2e  /  uv run pytest -m integration
# (integration needs TEST_DATABASE_URL pointing at a real Postgres).
addopts = "-m 'not e2e and not integration'"
markers = [
    "e2e: end-to-end smoke tests against a running API instance (requires E2E_API_URL)",
    "integration: tests that hit a real database (auto-applied to tests using db fixtures)",
]
